Widen job item, fix spacing between jobs and contact, fix spacing at top

--- a/personal-website-frontend/src/styles/app.css
+++ b/personal-website-frontend/src/styles/app.css
@@ -57,18 +57,18 @@ length depending on the size of the content*/
     background-color: var(--dark-color);
     display: grid;
 		place-items: center;
-    grid-template-rows: 100vh 100vh 75vh 175vh 250vh 100vh;
+    grid-template-rows: 100vh 120vh 75vh 175vh 250vh 100vh;
 }
 
 
 @media only screen and (max-height: 500px) {
 	.app-page {
-    grid-template-rows: 100vh 100vh 100vh 240vh 500vh 200vh !important;
+    grid-template-rows: 100vh 120vh 100vh 240vh 500vh 200vh !important;
  }
 }
 
 @media only screen and (min-width: 768px) {
 	.app-page {
-    grid-template-rows: 100vh 100vh 75vh 120vh 250vh 100vh;
+    grid-template-rows: 100vh 120vh 75vh 120vh 250vh 150vh;
 }
 }
