--- a/personal-website-frontend/src/styles/work-experience.css
+++ b/personal-website-frontend/src/styles/work-experience.css
@@ -37,7 +37,7 @@
 .job-title img {
     width: 65px;
     height: 65px;
-    border-radius: 5px;
+    border-radius: 9px;
 }
 
 .job-item {
@@ -45,7 +45,7 @@
     flex-direction: column;
     background-color: var(--third-color);
     border-radius: 20px;
-    padding: 10px;
+    padding: 15px;
     width: 350px;
     transition: all ease 0.4s;
 }
